--- a/schere-stein-papier.html
+++ b/schere-stein-papier.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello, world!</title>
+  <title>Rock, Paper, Siccors</title>
   <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <meta name="description" content="" >
