--- a/schere-stein-papier.html
+++ b/schere-stein-papier.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" type="text/css" href="styles/global.css" >
 </head>
 <body>
-  <div class="content-box-top"></div>
-  <div class="content-box-bottom"></div>
+  <article class="content-box-top"></article>
+  <article class="content-box-bottom"></article>
   <script src="scripts/controller/main.js" type="module"></script>
 </body>
 </html>
